--- a/pg2.html
+++ b/pg2.html
@@ -71,3 +71,26 @@
       </div>
     </aside>
   </main>
+
+ <footer class="site-footer small">
+    <div class="container footer-grid">
+      <div>
+        <strong>EatSync</strong>
+        <p class="muted">Personalized meal planning that syncs with your fitness goals.</p>
+      </div>
+      <div class="footer-links">
+        <h5>Quick Links</h5>
+        <a href="index.html">Home</a>
+        <a href="meal-plans.html">Meal Plans</a>
+      </div>
+      <div>
+        <h5>Contact</h5>
+        <a href="mailto:support@eatsync.com">support@eatsync.com</a>
+      </div>
+    </div>
+    <div class="copyright">© 2025 EatSync. All rights reserved.</div>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
