--- a/pg3.html
+++ b/pg3.html
@@ -105,3 +105,68 @@
             <a class="btn small primary" href="#">View Details</a>
           </div>
         </article>
+
+        <article class="plan tile" data-cat="vegan">
+          <img src="https://picsum.photos/seed/p4/600/360" alt="">
+          <div class="tile-body">
+            <h3>Vegan Power</h3>
+            <p class="muted small">Plant-based nutrition for optimal health</p>
+            <div class="tile-meta">
+              <div>Rs.<strong>12,499</strong>/month</div>
+              <div>Calories/day: 1800-2000</div>
+            </div>
+            <a class="btn small primary" href="#">View Details</a>
+          </div>
+        </article>
+
+        <article class="plan tile" data-cat="keto">
+          <img src="https://picsum.photos/seed/p5/600/360" alt="">
+          <div class="tile-body">
+            <h3>Keto Advanced</h3>
+            <p class="muted small">Low-carb, high-fat meals for ketogenic diet</p>
+            <div class="tile-meta">
+              <div>Rs.<strong>14,499</strong>/month</div>
+              <div>Calories/day: 1600-1900</div>
+            </div>
+            <a class="btn small primary" href="#">View Details</a>
+          </div>
+        </article>
+
+        <article class="plan tile" data-cat="muscle-gain">
+          <img src="https://picsum.photos/seed/p6/600/360" alt="">
+          <div class="tile-body">
+            <h3>Athletic Performance</h3>
+            <p class="muted small">Optimized nutrition for peak performance</p>
+            <div class="tile-meta">
+              <div>Rs.<strong>17,499</strong>/month</div>
+              <div>Calories/day: 2800-3200</div>
+            </div>
+            <a class="btn small primary" href="#">View Details</a>
+          </div>
+        </article>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <strong>EatSync</strong>
+        <p class="muted">Personalized meal planning that syncs with your fitness goals.</p>
+      </div>
+      <div class="footer-links">
+        <h5>Quick Links</h5>
+        <a href="index.html">Home</a>
+        <a href="meal-plans.html">Meal Plans</a>
+      </div>
+      <div>
+        <h5>Contact</h5>
+        <a href="mailto:support@eatsync.com">support@eatsync.com</a>
+      </div>
+    </div>
+    <div class="copyright">© 2025 EatSync. All rights reserved.</div>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
