--- a/pg1.html
+++ b/pg1.html
@@ -45,7 +45,7 @@ HomePage HTML
             </div>
 
             <div class="hero-img">
-                <img src="meal.jpg" alt="Meal Plan">
+                <img src="images/" alt="Meal Plan">
             </div>
         </div>
     </section>
