--- a/pg3.html
+++ b/pg3.html
@@ -1,172 +1,182 @@
+Prodcut Listing HTML
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>EatSync — Meal Plans</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EatSync - Meal Plans</title>
+    <link rel="stylesheet" href="meal-plans.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="brand">
-        <img src="https://i.ibb.co/3s7k9mD/logo-circle.png" alt="EatSync" class="logo" />
-        <span class="brand-name">EatSync</span>
-      </div>
 
-      <nav class="main-nav">
-        <a href="index.html">Home</a>
-        <a href="meal-plans.html" class="active">Meal Plans</a>
-        <a href="login.html">Sign In</a>
-      </nav>
+<!-- Navbar -->
+<header class="navbar">
+    <div class="logo">EatSync</div>
+    <nav>
+        <a href="#">Home</a>
+        <a class="active" href="#">GoalSync Builder</a>
+        <a href="#">Meal Plans</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact</a>
+    </nav>
+    <div class="nav-right">
+        <a href="#" class="signin">Sign In</a>
+        <span class="cart">🛒</span>
+    </div>
+</header>
 
-      <div class="header-actions">
-        <a class="btn ghost" href="login.html">Sign In</a>
-        <button class="mobile-menu-btn" id="mobileMenuBtn2" aria-label="Menu">☰</button>
-      </div>
+<!-- Main Section -->
+<section class="main">
+    <h1>Meal Plans</h1>
+    <p class="sub">Discover the perfect meal plan to achieve your fitness goals</p>
+
+    <!-- Filters -->
+    <div class="filters">
+        <h3>Filters</h3>
+
+        <div class="filter-row">
+            <div>
+                <label>Category</label>
+                <div class="buttons">
+                    <button class="active">All Plans</button>
+                    <button>Weight Loss</button>
+                    <button>Muscle Gain</button>
+                    <button>Balanced</button>
+                    <button>Vegan</button>
+                    <button>Keto</button>
+                </div>
+            </div>
+
+            <div>
+                <label>Duration</label>
+                <div class="buttons">
+                    <button class="active">All</button>
+                    <button>Weekly</button>
+                    <button>Monthly</button>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="mobile-nav" id="mobileNav2">
-      <a href="index.html">Home</a>
-      <a href="meal-plans.html">Meal Plans</a>
-      <a href="login.html">Sign In</a>
-    </div>
-  </header>
+    <!-- Cards -->
+    <div class="cards">
 
-  <main class="container mealpage">
-    <section class="filter-bar">
-      <h2>Meal Plans</h2>
-      <p class="muted">Discover the perfect meal plan to achieve your fitness goals</p>
-
-      <div class="filters">
-        <div class="filter-group">
-          <label>Category</label>
-          <div class="chips" id="categoryChips">
-            <button class="chip active" data-cat="all">All Plans</button>
-            <button class="chip" data-cat="weight-loss">Weight Loss</button>
-            <button class="chip" data-cat="muscle-gain">Muscle Gain</button>
-            <button class="chip" data-cat="balanced">Balanced</button>
-            <button class="chip" data-cat="vegan">Vegan</button>
-            <button class="chip" data-cat="keto">Keto</button>
-          </div>
-        </div>
-
-        <div class="filter-group">
-          <label>Duration</label>
-          <div class="chips">
-            <button class="chip active" data-duration="all">All</button>
-            <button class="chip" data-duration="weekly">Weekly</button>
-            <button class="chip" data-duration="monthly">Monthly</button>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="plans-list">
-      <div class="cards-grid" id="plansGrid">
-        <!-- Cards: each card has data-cat attribute matching chips -->
-        <article class="plan tile" data-cat="weight-loss">
-          <img src="https://picsum.photos/seed/p1/600/360" alt="">
-          <div class="tile-body">
+        <!-- Card 1 -->
+        <div class="card">
+            <img src="img1.jpg" alt="">
             <h3>Weight Loss Pro</h3>
-            <p class="muted small">Balanced meals designed for sustainable weight loss</p>
-            <div class="tile-meta">
-              <div>Rs.<strong>12,999</strong>/month</div>
-              <div>Calories/day: 1500-1800</div>
-            </div>
-            <a class="btn small primary" href="#">View Details</a>
-          </div>
-        </article>
+            <p class="desc">Balanced meals designed for sustainable weight loss.</p>
 
-        <article class="plan tile" data-cat="muscle-gain">
-          <img src="https://picsum.photos/seed/p2/600/360" alt="">
-          <div class="tile-body">
+            <p class="price">Rs. <strong>12,999</strong> /month</p>
+            <p>Calories/day: <strong>1500–1800</strong></p>
+            <p>Meals/week: <strong>21</strong></p>
+
+            <button class="details">View Details</button>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="card">
+            <img src="img2.jpg" alt="">
             <h3>Muscle Gain</h3>
-            <p class="muted small">High-protein meals to support muscle growth</p>
-            <div class="tile-meta">
-              <div>Rs.<strong>15,999</strong>/month</div>
-              <div>Calories/day: 2500-3000</div>
-            </div>
-            <a class="btn small primary" href="#">View Details</a>
-          </div>
-        </article>
+            <p class="desc">High-protein meals to support muscle growth.</p>
 
-        <article class="plan tile" data-cat="balanced">
-          <img src="https://picsum.photos/seed/p3/600/360" alt="">
-          <div class="tile-body">
+            <p class="price">Rs. <strong>15,999</strong> /month</p>
+            <p>Calories/day: <strong>2800–3000</strong></p>
+            <p>Meals/week: <strong>21</strong></p>
+
+            <button class="details">View Details</button>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="card">
+            <img src="img3.jpg" alt="">
             <h3>Balanced Living</h3>
-            <p class="muted small">Nutritious meals for a healthy lifestyle</p>
-            <div class="tile-meta">
-              <div>Rs.<strong>11,999</strong>/month</div>
-              <div>Calories/day: 2000-2200</div>
-            </div>
-            <a class="btn small primary" href="#">View Details</a>
-          </div>
-        </article>
+            <p class="desc">Nutritional meals for a healthy lifestyle.</p>
 
-        <article class="plan tile" data-cat="vegan">
-          <img src="https://picsum.photos/seed/p4/600/360" alt="">
-          <div class="tile-body">
+            <p class="price">Rs. <strong>13,999</strong> /month</p>
+            <p>Calories/day: <strong>2000–2200</strong></p>
+            <p>Meals/week: <strong>21</strong></p>
+
+            <button class="details">View Details</button>
+        </div>
+
+        <!-- Card 4 -->
+        <div class="card">
+            <img src="img4.jpg" alt="">
             <h3>Vegan Power</h3>
-            <p class="muted small">Plant-based nutrition for optimal health</p>
-            <div class="tile-meta">
-              <div>Rs.<strong>12,499</strong>/month</div>
-              <div>Calories/day: 1800-2000</div>
-            </div>
-            <a class="btn small primary" href="#">View Details</a>
-          </div>
-        </article>
+            <p class="desc">Plant-based nutrition for optimal health.</p>
 
-        <article class="plan tile" data-cat="keto">
-          <img src="https://picsum.photos/seed/p5/600/360" alt="">
-          <div class="tile-body">
+            <p class="price">Rs. <strong>13,999</strong> /month</p>
+            <p>Calories/day: <strong>1800–2000</strong></p>
+            <p>Meals/week: <strong>21</strong></p>
+
+            <button class="details">View Details</button>
+        </div>
+
+        <!-- Card 5 -->
+        <div class="card">
+            <img src="img5.jpg" alt="">
             <h3>Keto Advanced</h3>
-            <p class="muted small">Low-carb, high-fat meals for ketogenic diet</p>
-            <div class="tile-meta">
-              <div>Rs.<strong>14,499</strong>/month</div>
-              <div>Calories/day: 1600-1900</div>
-            </div>
-            <a class="btn small primary" href="#">View Details</a>
-          </div>
-        </article>
+            <p class="desc">Low-carb, high-fat meals for ketogenic diets.</p>
 
-        <article class="plan tile" data-cat="muscle-gain">
-          <img src="https://picsum.photos/seed/p6/600/360" alt="">
-          <div class="tile-body">
+            <p class="price">Rs. <strong>14,999</strong> /month</p>
+            <p>Calories/day: <strong>1600–1900</strong></p>
+            <p>Meals/week: <strong>21</strong></p>
+
+            <button class="details">View Details</button>
+        </div>
+
+        <!-- Card 6 -->
+        <div class="card">
+            <img src="img6.jpg" alt="">
             <h3>Athletic Performance</h3>
-            <p class="muted small">Optimized nutrition for peak performance</p>
-            <div class="tile-meta">
-              <div>Rs.<strong>17,499</strong>/month</div>
-              <div>Calories/day: 2800-3200</div>
-            </div>
-            <a class="btn small primary" href="#">View Details</a>
-          </div>
-        </article>
-      </div>
-    </section>
-  </main>
+            <p class="desc">Performance nutrition for peak endurance.</p>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
-      <div>
-        <strong>EatSync</strong>
-        <p class="muted">Personalized meal planning that syncs with your fitness goals.</p>
-      </div>
-      <div class="footer-links">
-        <h5>Quick Links</h5>
-        <a href="index.html">Home</a>
-        <a href="meal-plans.html">Meal Plans</a>
-      </div>
-      <div>
-        <h5>Contact</h5>
-        <a href="mailto:support@eatsync.com">support@eatsync.com</a>
-      </div>
+            <p class="price">Rs. <strong>16,999</strong> /month</p>
+            <p>Calories/day: <strong>2800–3200</strong></p>
+            <p>Meals/week: <strong>35</strong></p>
+
+            <button class="details">View Details</button>
+        </div>
+
     </div>
-    <div class="copyright">© 2025 EatSync. All rights reserved.</div>
-  </footer>
 
-  <script src="script.js"></script>
+</section>
+
+<!-- Footer -->
+<footer class="footer">
+    <div class="footer-left">
+        <h2>EatSync</h2>
+        <p>Your smart meal partner for a healthier lifestyle.</p>
+        <p>Personalized meal planning that syncs with your fitness goals.</p>
+    </div>
+
+    <div class="footer-links">
+        <h4>Quick Links</h4>
+        <a href="#">Home</a>
+        <a href="#">GoalSync Builder</a>
+        <a href="#">Meal Plans</a>
+        <a href="#">About Us</a>
+        <a href="#">Contact</a>
+        <a href="#">Login / Sign Up</a>
+    </div>
+
+    <div class="footer-contact">
+        <h4>Contact Us</h4>
+        <p>Email: support@eatsync.com</p>
+        <p>Phone: +92 300 1234567</p>
+        <p>Islamabad, Pakistan</p>
+    </div>
+</footer>
+
+<div class="copyright">
+    © 2025 EatSync. All rights reserved.<br>
+    Developed by Abdul Hannan Rauf & Zainab Toor - IICT Final Project
+</div>
+
 </body>
 </html>
