--- a/pg3.html
+++ b/pg3.html
@@ -2,6 +2,7 @@ Prodcut Listing HTML
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="pg3.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EatSync - Meal Plans</title>
